--- a/DormitoryManagementSystem.API/appsettings.json
+++ b/DormitoryManagementSystem.API/appsettings.json
@@ -9,10 +9,10 @@
     "ConnectionStrings": {
       "DefaultConnection": "Host=dpg-d4m1o04hg0os73bi6570-a.singapore-postgres.render.com;Port=5432;Database=qlktx-db;Username=qlktx_user;Password=dFMGzutvj2TTIOkCaxcrH8nZsrlEE7X7;SSL Mode=Require;TrustServerCertificate=true"
     },
-  
+
     "Jwt": {
-      "Key": "DayLaCaiKeyBiMatCuaNhomChungToiKhongDuocTietLo123456",
-      "Issuer": "https://qlktx-backend.onrender.com",
-      "Audience": "https://qlktx-backend.onrender.com"
+        "Key": "DayLaCaiKeyBiMatCuaNhomChungToiKhongDuocTietLo123456",
+        "Issuer": "https://test-api-dm8w.onrender.com",
+        "Audience": "https://test-api-dm8w.onrender.com"
     }
   }
